--- a/src/main/resources/assets/arms_and_charms/lang/en_us.json
+++ b/src/main/resources/assets/arms_and_charms/lang/en_us.json
@@ -7,6 +7,8 @@
   "item.arms_and_charms.raw_zinc": "Raw Zinc",
 
   "block.arms_and_charms.smile_block": "Smile Block",
+  "block.arms_and_charms.lead_block": "Block of Lead",
+
 
   "itemgroup.modgroup": "Mod Items"
 }
