--- a/src/main/resources/assets/arms_and_charms/lang/en_us.json
+++ b/src/main/resources/assets/arms_and_charms/lang/en_us.json
@@ -5,9 +5,15 @@
   "item.arms_and_charms.raw_silver": "Raw Silver",
   "item.arms_and_charms.zinc_ingot": "Zinc Ingot",
   "item.arms_and_charms.raw_zinc": "Raw Zinc",
+  "item.arms_and_charms.brass_ingot": "Brass Ingot",
+  "item.arms_and_charms.silver_apple": "Silver Apple",
+
 
   "block.arms_and_charms.smile_block": "Smile Block",
   "block.arms_and_charms.lead_block": "Block of Lead",
+  "block.arms_and_charms.silver_block": "Block of Silver",
+  "block.arms_and_charms.zinc_block": "Block of Zinc",
+  "block.arms_and_charms.brass_block": "Block of Brass",
 
 
   "itemgroup.modgroup": "Mod Items"
